<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#000"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <ImageView
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/search_icon" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_dialog"
            android:textColor="#fff"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/office_name_et"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/company_name"
                android:textSize="17sp" />

            <requestFocus />

        </LinearLayout>

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/or"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/nation_sp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="17sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_weight="1"
            android:background="@drawable/register_btn"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="17sp" />

        <View
            android:layout_width="30.0dip"
            android:layout_height="fill_parent" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_height="40.0dip"
            android:layout_weight="1.0"
            android:background="@drawable/register_btn"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="17sp" />
    </LinearLayout>


</RelativeLayout>