<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/layout_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:gravity="center"
        android:text="@string/call_dialog_title"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20.0sp"
        android:typeface="serif" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_below="@+id/header_msg"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/body_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_msg"
        android:layout_margin="15.0dip"
        android:text="@string/call_dialog_body"
        android:textColor="#000"
        android:textSize="16.0dip"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/body_msg"
        android:layout_marginBottom="15.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/phone1_btn"
            android:layout_width="0dp"
            android:layout_height="35.0dip"
            android:layout_weight="1"
            android:textColor="#fff"
            android:textSize="16sp"
            android:background="@drawable/register_btn" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="30.0dip"
            android:layout_height="fill_parent"
            android:text="@string/or"
            android:gravity="center"/>

        <Button
            android:id="@+id/phone2_btn"
            android:layout_width="0dp"
            android:layout_height="35.0dip"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_weight="1.0"
            android:background="@drawable/register_btn" />
    </LinearLayout>


</RelativeLayout>