<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/layout_bg">

    <TextView
        android:id="@+id/dialog_title_textView"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_height="wrap_content"
        android:text="@string/comment_dialog" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/editTextDialogUserInput"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/add_commect"
        android:layout_height="wrap_content" >
        <requestFocus />

    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="5.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="35.0dip"
            android:layout_weight="1"
            android:textColor="#fff"
            android:text="@string/cancel"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:background="@drawable/register_btn" />

        <View
            android:id="@+id/or_tv"
            android:layout_width="30.0dip"
            android:layout_height="fill_parent" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_height="35.0dip"
            android:textColor="#fff"
            android:textSize="17sp"
            android:text="@string/add_commect"
            android:layout_weight="1.0"
            android:textAllCaps="false"
            android:background="@drawable/register_btn" />
    </LinearLayout>

</LinearLayout>